--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,15 @@ Thumbs.db
 
 # Log files
 *.log
+# API Configuration (local development only)
+# Please make sure that your API keys ARE NOT uploaded to your GitHub repo
+frontend/js/api-config.js
+api-config.js
+
+
+# Editor files
+# Please add these four lines to your .gitignore file too
+.vscode/
+.idea/
+*.swp
+*.swo
